--- a/wp-content/themes/understrap-child/sass/theme/PRECHROME STYLE TEST 1.3.19 atomicmouse.scss
+++ b/wp-content/themes/understrap-child/sass/theme/PRECHROME STYLE TEST 1.3.19 atomicmouse.scss
@@ -1207,7 +1207,7 @@
     // strategic marketing management panel
     // ==========================================================================
 
-    #smmbox {
+    #smm-box {
         display: inline-flex;
         align-items: center;
         flex-direction: row;
