--- a/wp-content/themes/understrap-child/sass/theme/atomicmouse_variables.scss
+++ b/wp-content/themes/understrap-child/sass/theme/atomicmouse_variables.scss
@@ -43,23 +43,39 @@ $max_font: 20;
 
 
 $modularscale: (base: 1rem, ratio: 1.33);
-
-$ms-0-1:    0.178em;
-$ms-0-2:    0.238em;
-$ms-0-3:    0.317em;
-$ms-0-4:    0.422em;
-$ms-0-5:    0.563em;
-$ms-0-6:    0.639em;
-$ms-0-7:    0.75em;
-$ms-0-8:    0.78em;
-$ms-0-9:    0.851em;
+$ms--10:     ms(-10);
+$ms--9_5:    ms(-9.5);
+$ms--9:      ms(-9);
+$ms--8_5:    ms(-8.5);
+$ms--8:      ms(-8);
+$ms--7:      ms(-7);
+$ms--6_5:    ms(-6.5);
+$ms--6:      ms(-6);
+$ms--5:      ms(-5);
+$ms--4_5:    ms(-4.5);
+$ms--4:      ms(-4);
+$ms--3_5:    ms(-3.5);
+$ms--3:      ms(-3);
+$ms--2_5:    ms(-2_5);
+$ms--2_25:   ms(-2.25);
+$ms--2:      ms(-2);
+$ms--1_75:   ms(-1.75);
+$ms--1_5:    ms(-1.5);
+$ms--1_25:   ms(-1.25);
+$ms--1:      ms(-1);
+$ms--_75:    ms(-0.75);
+$ms--_5:     ms(-0.5);
+$ms--_25:    ms(-0.25);
+$ms--_15:    ms(-0.15);
 $ms-0:      ms(0);
 $ms-_15:    ms(0.15);
 $ms-_25:    ms(0.25);
 $ms-_5:     ms(0.5);
 $ms-_75:    ms(0.75);
 $ms-1:      ms(1);
+$ms-1_25:   ms(1.25);
 $ms-1_5:    ms(1.5);
+$ms-1_75:   ms(1.75);
 $ms-2:      ms(2);
 $ms-2_25:   ms(2.25);
 $ms-2_5:    ms(2_5);
@@ -74,14 +90,16 @@ $ms-7:      ms(7);
 $ms-8:      ms(8);
 $ms-8_5:    ms(8.5);
 $ms-9:      ms(9);
-$ms-9_5:    ms(9.5);
-            
+$ms-9_5:    ms(9.5);        
 $ms-10:     ms(10);
 $ms-10_25:  ms(10.25);
 $ms-10_5:   ms(10.5);
 $ms-10_75:  ms(10.75);
 $ms-11:     ms(11);
+$ms-11_5:     ms(11.5);
+$ms-11_75:     ms(11.75);
 $ms-12:     ms(12);
+$ms-12_25:     ms(12.25);
 $ms-12_5:   ms(12.5);
 $ms-13:     ms(13);    
 $ms-13_5:   ms(13.5);  
@@ -95,7 +113,7 @@ $ms-16:     ms(16);
 
 // stylelint-disable value-keyword-case
 $font-family-sans-serif: -apple-system, BlinkMacSystemFont, geomanist, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-$font-family-monospace: roboto mono, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+$font-family-monospace: roboto, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 $font-family-base: $font-family-sans-serif;
 $font-family-serif: adobe-garamond-pro, Georgia, Palatino, "Times New Roman", Courier;
 
@@ -110,7 +128,7 @@ $font-weight-black: 700;
 
 $h1-font-size: $ms-7;
 $h2-font-size: $ms-3;
-$h3-font-size: $ms-2;
+$h3-font-size: $ms-2_5;
 $h4-font-size: $ms-1;
 $h5-font-size: $ms-_75;
 $h6-font-size: $ms-_25;
