--- a/wp-content/themes/understrap-child/sass/theme/atomicmouse.scss
+++ b/wp-content/themes/understrap-child/sass/theme/atomicmouse.scss
@@ -1923,7 +1923,7 @@ margin-bottom: $rvr-2;
 }
 
 #do-container {
-    padding: 0;
+    padding: 0 $ms-3 0 0;
     display: flex;
     align-items: center;
     min-height: 100vh;
@@ -1939,11 +1939,35 @@ margin-bottom: $rvr-2;
 .do-headline{
     margin-bottom: $rvr-2;
     font-size: $h2-font-size;
-    padding-left: $ms-1;
+    letter-spacing: -0.04rem;
 }
 
+.do-icon .style-svg{
+    height: $rvr-4;
+    width: $ms-6;
+    fill: black;
+}
 
+.card-intro .row{
+        border-top: $ms--8 solid $primary;
+        padding-top: $rvr-2;
+}
 
+#do-content > div.row.container-cards > div:nth-child(4){
+    border-bottom: $ms--8 solid $primary;
+    padding-bottom: $rvr-2;
+}
+
+.do-icon{
+    @include make-col(2);
+}
+
+.card-title{
+     @include make-col(10);
+ }
+.card-summary{
+    @include make-col(12);
+}
 // .do-headline{
 //     margin-bottom: $rvr-2;
 //     font-size: $h4-font-size;
@@ -2043,9 +2067,10 @@ padding: $rvr-1 $ms-1 $rvr-1 $ms-1;
     margin-bottom: $rvr-2;
     font-family: $font-family-sans-serif;
     font-weight: 300;
-    padding: 0 35px 0 0;
-    font-size: $ms-1;
-    padding-left: $ms-1;
+    padding: 0 $ms-0 0 0;
+    font-size: $ms-2;
+    line-height:$rvr-2;
+    // letter-spacing: -.042rem;
 }
 
 .do.card *{
@@ -2054,18 +2079,47 @@ padding: $rvr-1 $ms-1 $rvr-1 $ms-1;
 }
 
 .do.card .card-title{
-    border-top: $ms--8 solid $primary;
-padding: $rvr-2 0 0 0;
+//     border-top: $ms--8 solid $primary;
+// padding: $rvr-2 0 0 0;
    font-family: $font-family-sans-serif;
-    font-weight: 200;
+    font-weight: 400;
     font-size: $ms-2;
+    text-transform: uppercase;
+    letter-spacing: -.025rem;
+    line-height: $rvr-1_5;
+    padding-left: $ms-1;
+    }
+
+    #do-card-3-width > div.card-intro > div > div.head-row > div.do-icon{
+         width: $ms-6;
+         max-width: unset;   
+    }
+
+   #do-card-3-width > div.card-intro > div > div.head-row > div.card-title > span{
+           font-family: $font-family-sans-serif;
+    font-weight: 400;
+    font-size: $ms-2;
+    text-transform: uppercase;
+    letter-spacing: -.025rem;
+    line-height: $rvr-1_5;
+    }
+
+#do-card-3-width > div.card-intro > div > div.head-row > div.do-icon{
+
+}
+
+#do-card-3-width > div.card-intro > div > div.head-row > div.card-title > span:nth-child(2){
+            &::before{
+            content: "\A";
+            white-space: pre;
+        }
     }
 
 .card-summary, .card-body, .card-list, .do.card .card-title, .do-toggle-1,.do-toggle-2,.do-toggle-3,.do-toggle-4{
-padding-left: $ms-2_5;
-padding-right: $ms-2_5;
-margin-left: $ms-1;
-margin-right: $ms-1;
+// padding-left: $ms-0;
+// padding-right: $ms-0;
+// margin-left: $ms-_5;
+// margin-right: $ms-_5;
 }
 
 .do .toggle-content{
@@ -2079,26 +2133,31 @@ margin-right: $ms-1;
 .do-toggle-1,.do-toggle-2,.do-toggle-3,.do-toggle-4{
     color: black;
     font-style: italic;
-    margin: 0 $ms-1 $rvr-1 $ms-1;
+//     margin: 0 $ms-1 $rvr-1 $ms-1;
 }
 
 
 .card-summary, .card-body{
 padding-top: $rvr-_25;
 // border-top: thin solid $gray-400;
-margin: 0 $ms-1;
+// margin: 0 $ms-1;
 // padding-left: 0;
 }
 
+.card-summary,  .do-toggle-1,.do-toggle-2,.do-toggle-3,.do-toggle-4, .card-content{
+    padding-left: $ms-1;
+}
+
 h4.card-subhead, .card-list h4{
-    padding-bottom: $rvr-_05;
+    padding-bottom: $rvr-_75;
+
 }
 
 .card-list{
   padding-top: $rvr-1;
 padding-bottom: $rvr-1;
+padding-left: 0;
 // border-bottom: thin solid $gray-400;
-margin: auto $ms-1;
 // padding-left: 0;  
 }
 
@@ -2137,11 +2196,20 @@ div#do-card-2 {
 }
 
 .card-intro{
+    // display: inline-flex;
+    // align-content: center;
     margin-bottom: $rvr-1;
 //     max-width: $ms-12;
        @include media-breakpoint-up(md) {
        height: $rvr-8;
+       padding-left: 0;
 }
+}
+
+.head-row{
+    display: flex;
+    align-items: center;
+    margin-bottom: $rvr-_75;
 }
 
 .card-content{
@@ -2150,6 +2218,8 @@ div#do-card-2 {
 
 .card-body{
     margin-top: $rvr-1;
+    margin-left: 0;
+    padding-left: 0;
     @include media-breakpoint-up(md){
             height: $rvr-8;
     }
@@ -2264,15 +2334,16 @@ a.btn.btn-do {
     }
 }
 
-.about-content{
-    .headline, .subhead{
-        padding: 0 $ms-1;
-    }
-padding-right: $ms-2;
-}
+// .about-content{
+//     .headline, .subhead{
+//         padding: 0 $ms-1;
+//     }
+// padding-right: $ms-2;
+// }
 
 #about-blocks > div.about-content > div:nth-child(4){
     font-style: italic;
+    margin-bottom:$rvr-4;
 }
 
 .stats .style-svg{
@@ -2283,14 +2354,18 @@ padding-right: $ms-2;
 
 
 .stats{
+background: $gray-100;
 display: flex;
 align-items: center;
 flex-direction: column;
+border: $ms--6 solid white;
    @include make-col-ready;
             @include make-col(4);
-            padding-left: 0;
-    padding-right: 30px;
-    margin-top: $rvr-1;
+            padding-left: $ms-1;
+    padding-right: $ms-1;
+    padding-top: $rvr-_5;
+    padding-bottom: $rvr-_25;
+    // margin-top: $rvr-3;
                 @include media-breakpoint-up(md) {
                    padding-right: 0;
                    margin-top: 0;
@@ -2315,7 +2390,12 @@ flex-direction: column;
         }
     }
 
+.icons-caption{
+    margin-bottom: $rvr-2;
+    font-weight: 400;
+    align-self: flex-start;
 
+}
 
 // #about-content-row {
 //     display: flex;
@@ -2675,7 +2755,7 @@ div.copy:last-of-type {
 }
 
 .page-title {
-    font-size: $ms--1;
+    font-size: $ms-1;
     font-weight: 200;
     position: relative;
     margin-bottom: $rvr-2;
