--- a/wp-content/themes/understrap-child/sass/theme/partials/_atomicmouse_color_system.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/_atomicmouse_color_system.scss
@@ -33,7 +33,12 @@ $yellow:  #ffc107 !default;
 $green:   #28a745 !default;
 $teal:    #20c997 !default;
 $cyan:    #17a2b8 !default;
-$tungsten:#707b81;
+$tungsten:#D2DBE2;
+$primary: #99A5B1;
+$test1: #ecf2f9;
+$offwhite1: rgba(253, 253, 253, 1);
+$offwhite: rgba(250,250,250, 1);
+$ghostwhite: #F8F8FF;
 
 $colors: () !default;
 $colors: map-merge((
