--- a/wp-content/themes/understrap-child/sass/theme/atomicmouse_variables.scss
+++ b/wp-content/themes/understrap-child/sass/theme/atomicmouse_variables.scss
@@ -20,6 +20,12 @@
 @import "node_modules/mathsass/dist/math";
 
 
+html [type=button]{
+  -webkit-appearance: none;
+   -moz-appearance:   none;
+   appearance:        none;
+}
+
 $min_width: 300;
 $max_width: 3000;
 
@@ -216,6 +222,7 @@ $rvr-_6:  calc(var(--baseline) * 0.6rem);
 $rvr-_75: calc(var(--baseline) * 0.75rem);
 $rvr-1:   calc(var(--baseline) * 1rem);
 $rvr-1_5: calc(var(--baseline) * 1.5rem);
+$rvr-1_75: calc(var(--baseline) * 1.75rem);
 $rvr-2:   calc(var(--baseline) * 2rem);
 $rvr-2_5: calc(var(--baseline) * 2.5rem);
 $rvr-3:   calc(var(--baseline) * 3rem);
