--- a/wp-content/themes/understrap-child/sass/theme/partials/_atomicmouse_color_system.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/_atomicmouse_color_system.scss
@@ -35,6 +35,7 @@ $teal:    #20c997 !default;
 $cyan:    #17a2b8 !default;
 $tungsten:#D2DBE2;
 $primary: #99A5B1;
+$secondary: #888888;
 $test1: #ecf2f9;
 $offwhite1: rgba(253, 253, 253, 1);
 $offwhite: rgba(250,250,250, 1);
@@ -57,8 +58,8 @@ $colors: map-merge((
   "gray-dark":  $gray-800
 ), $colors);
 
-$primary:       $tungsten !default;
-$secondary:     $gray-600 !default;
+
+
 $success:       $green !default;
 $info:          $cyan !default;
 $warning:       $yellow !default;
